# DevExDataEngineeringExampleProject

./: README.md
after/SampleDataProduct/: README.md  pyproject.toml
after/SampleDataProduct/.github/workflows/: ci.yml
after/SampleDataProduct/sample_data_product/: extract.py  load.py  transform.py
after/SampleDataProduct/scripts/: format.sh
after/SampleDataProduct/tests/: test_extract.py  test_load.py  test_transform.py
before/SampleDataProduct/: pyproject.toml  requirements.txt  test.py
before/SampleDataProduct/sample_data_product/: extract.py  load.py  transform.py
template/: cookiecutter.json
template/hooks/: post_gen_project.sh
template/{{cookiecutter.package_name}}/: Makefile
template/{{cookiecutter.package_name}}/.github/workflows/: ci.yml
template/{{cookiecutter.package_name}}/scripts/: lint.sh
template/{{cookiecutter.package_name}}/tests/: test_module.py
template/{{cookiecutter.package_name}}/{{cookiecutter.package_name|lower}}/: __main__.py
template/{{cookiecutter.package_name}}/{{cookiecutter.package_name|lower}}/cli/: __init__.py
