[tool.poetry]
name = "sampledataproduct"
version = "0.1.0"
description = ""
authors = ["Kacper Wojtasinski <k0wojtasinski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = {extras = ["deltalake"], version = "^0.20.31"}
mimesis = "^17.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ssv"
testpaths = [
    "tests",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["S101", "D100", "D104", "S311"]

